# news-api-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  direct_test.py  docker-compose.yml  pyproject.toml  simple_test.py  smithery.yaml  test_mcp.py  test_mcp_protocol.py
news_api_mcp/: __main__.py  server.py  tools.py
src/news_api_mcp/: tools.py
